fix on mobile

--- a/packages/ui/components/AutoSuggest/index.styl
+++ b/packages/ui/components/AutoSuggest/index.styl
@@ -18,3 +18,5 @@
 .wrapper
   overflow visible
   height auto
+  +web()
+    overflow auto
